# multimodal_ai

./: models.json  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/io/github/t112360140/multimodal_ai/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper-jni.c
app/src/main/java/io/github/t112360140/multimodal_ai/: Constants.kt  InferenceManager.kt  MainActivity.kt  MainActivity2.kt  ModelDownloader.kt  SpeechDetector.kt  VoiceRecorder.kt  WhisperCpuConfig.kt  WhisperLib.kt
app/src/main/res/drawable/: camera_off.xml  camera_on.xml  close.xml  delect.xml  download.xml  download_done.xml  mic_alert.xml  mic_off.xml  mic_on.xml  pause.xml  start.xml
app/src/main/res/layout/: activity_main.xml  activity_main2.xml
app/src/main/res/values/: ic_launcher_dark_background.xml  models.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/io/github/t112360140/multimodal_ai/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
